--- a/web01-1/css/css.css
+++ b/web01-1/css/css.css
@@ -70,7 +70,10 @@ body
 {
 	position:relative;
 	border-radius:10px;
-	background:url(icon/menu.fw.png) center no-repeat;
+
+	/* CSS 當前沒有icon資料夾 */
+	/* background:url(icon/menu.fw.png) center no-repeat; */
+	background:url(../icon/menu.fw.png) center no-repeat;
 	background-size:cover;
 	line-height:30px;
 	padding:2px 10px 2px 10px;
@@ -78,14 +81,14 @@ body
 }
 .mainmu:hover
 {
-	background:url(icon/menu2.fw.png) center no-repeat;
+	background:url(../icon/menu2.fw.png) center no-repeat;
 	background-size:cover;
 }
 .mainmu2
 {
 	position:relative;
 	border-radius:10px;
-	background:url(icon/menu3.fw.png)center no-repeat;
+	background:url(../icon/menu3.fw.png)center no-repeat;
 	background-size:100% 100%;
 	line-height:30px;
 	padding:2px 10px 2px 10px;
@@ -93,7 +96,7 @@ body
 }
 .mainmu2:hover
 {
-	background:url(icon/menu4.fw.png) center no-repeat;
+	background:url(../icon/menu4.fw.png) center no-repeat;
 	background-size:cover;
 }
 #lf
